--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 										<h2><a href="#">Project 2<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/website pic.jpg" alt="" width="840" height="640" /></a>
+									<a href="#" class="image fit"><img src="images/websitepic.png" alt="" width="840" height="640" /></a>
 									<p>Still a work in progress</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Check it out</a></li>
