--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/Rrun3.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/rich5k/richardanatsui.github.io/blob/master/richard_anatsui.zip" class="button large">Check it out</a></li>
+									<li><a href="https://github.com/rich5k/1stproject-Python-game" class="button large">Check it out</a></li>
 								</ul>
 							</article>
 
@@ -70,7 +70,7 @@
 									<a href="#" class="image fit"><img src="images/Rrun3.png" alt="" /></a>
 									<p></p>
 									<ul class="actions special">
-										<li><a href="https://github.com/rich5k/richardanatsui.github.io/blob/master/richard_anatsui.zip" class="button">Check it out</a></li>
+										<li><a href="https://github.com/rich5k/1stproject-Python-game" class="button">Check it out</a></li>
 									</ul>
 								</article>
 								<article>
@@ -82,7 +82,7 @@
 									<a href="#" class="image fit"><img src="images/websitepic.png" alt="" width="840" height="640" /></a>
 									<p>Still a work in progress</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Check it out</a></li>
+										<li><a href="https://github.com/rich5k/2ndproject-Sowseeds-Webiste" class="button">Check it out</a></li>
 									</ul>
 								</article>
 								
